--- a/www/screenshots.html
+++ b/www/screenshots.html
@@ -23,13 +23,14 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <!-- start header -->
 <div id="header">
 	<div id="logo">
-		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.2</sup></a></h1>
+		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.2.6</sup></a></h1>
 	</div>
 	<div id="menu">
 		<ul>
 			<li><a href="index.html">home</a></li>
 			<li><a href="documentation.html">documentation</a></li>
 			<li class="active"><a href="screenshots.html">screenshots</a></li>
+			<li><a href="contact.html">contact</a></li>
 			<li><a href="http://github.com/yetty/DevContest">sources</a></li>
 		</ul>
 	</div>
