New version, documentation, screenshots

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <!-- start header -->
 <div id="header">
 	<div id="logo">
-		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.2.7</sup></a></h1>
+		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.3</sup></a></h1>
 	</div>
 	<div id="menu">
 		<ul>
@@ -59,8 +59,8 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 					</li>
 					<li><strong>Download the setup script</strong> and run it:
 						<code>
-						<small>root@myserver ~ #</small> wget http://github.com/downloads/yetty/DevContest/setup.sh<br />
-						<small>root@myserver ~ #</small> sh setup.sh
+						<small>root@myserver ~ #</small> wget http://github.com/downloads/yetty/DevContest/setup-0.3.sh<br />
+						<small>root@myserver ~ #</small> sh setup-0.3.sh
 						</code>
 					</li>
 					<li><strong>Go to devcontest dir.</strong> You can edit configuration files (it is not necessary):
@@ -86,7 +86,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 						<strong>Create new contest.</strong> In menu go to 'Administration' -> 'Contests', fill name of contest and submit it.
 					</li>
 					<li>
-						<strong>Create first task.</strong> Submit its name, fill description, example of input and output, script for generating input and correct script for proccess it. Save it. Down there are outputs of you script. You can check them.
+						<strong>Create first task.</strong> Submit its name, fill description, example of input and output and correct script for proccessing this problem. Below it there is a form to upload inputs. Inputs are ordinary text files which is passed into running script. Save it.
 					</li>
 					<li>
 						<strong>Start your first contest!</strong> Go back to 'Administration' -> 'Contests' and click to green arrow.
