--- a/www/screenshots.html
+++ b/www/screenshots.html
@@ -23,7 +23,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <!-- start header -->
 <div id="header">
 	<div id="logo">
-		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.2.7</sup></a></h1>
+		<h1><a href="#"><strong>Dev</strong>Contest<sup>0.3</sup></a></h1>
 	</div>
 	<div id="menu">
 		<ul>
@@ -61,6 +61,9 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 				<a href="screenshots/a4.png"><img src="screenshots/sa4.png" alt="" /></a>
 				<a href="screenshots/a5.png"><img src="screenshots/sa5.png" alt="" /></a>
 				<a href="screenshots/a6.png"><img src="screenshots/sa6.png" alt="" /></a>
+				<a href="screenshots/a7.png"><img src="screenshots/sa7.png" alt="" /></a>
+				<a href="screenshots/a8.png"><img src="screenshots/sa8.png" alt="" /></a>
+				<a href="screenshots/a9.png"><img src="screenshots/sa9.png" alt="" /></a>
 				<p></p>
 			</div>
 			<div class="meta">
